--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-radius: 5px;
+  font-size: ;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #f3f7ff;
 }
 
 @keyframes App-logo-spin {
